[gd_scene load_steps=4 format=3 uid="uid://dyv3uj3fb4kg6"]

[ext_resource type="Script" path="res://scripts/stratagem.gd" id="1_56fcd"]
[ext_resource type="PackedScene" uid="uid://dgn16lt5t6hon" path="res://scenes/stratagem_icon.tscn" id="2_wonyg"]

[sub_resource type="LabelSettings" id="LabelSettings_6qacg"]
font_size = 48
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="Stratagem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_56fcd")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="StratagemIcon" parent="CenterContainer/HBoxContainer" instance=ExtResource("2_wonyg")]
layout_mode = 2
color = Color(0.103744, 0.103744, 0.103744, 1)

[node name="InputDirections" type="HBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="stratagem_name" type="Label" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 128.0
text = "Orbital Precision Strike"
label_settings = SubResource("LabelSettings_6qacg")
horizontal_alignment = 1
vertical_alignment = 1
